--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "shema",
+  "name": "Shema Server",
   "version": "1.0.0",
-  "description": "Shema MERN Stack Ecommerce application",
-  "main": "index.js",
+  "description": "Test Server for SHEMA",
+  "proxy": "http://localhost:3000/1 ",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Bereky/shema-mern-ecommerce.git"
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "author": "Bereket Lemma",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Bereky/shema-mern-ecommerce/issues"
-  },
-  "homepage": "https://github.com/Bereky/shema-mern-ecommerce#readme",
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "cookie-parser": "^1.4.7"
+    "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^6.5.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^2.0.19"
   }
 }
